<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:includeFontPadding="false"
        android:paddingVertical="5dp"
        android:text="@string/rename_video"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:includeFontPadding="false"
        android:paddingVertical="5dp"
        android:text="@string/rename_video"
        android:textAlignment="center"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtRename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:background="@drawable/shape_rounded_secondary"
        android:focusedByDefault="true"
        android:fontFamily="@font/be_vietnam_pro__light"
        android:hint="@string/enter_a_new_name"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxLength="30"
        android:maxLines="4"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColor="@color/colorPrimaryText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryText"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackgroundSecondary"
            android:includeFontPadding="false"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryText"
            app:cornerRadius="10dp" />


    </LinearLayout>
</LinearLayout>