<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerTopView"
        android:layout_width="0dp"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@color/colorBackgroundSecondaryLightest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutVideoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Back Arrow -->
            <ImageButton
                android:id="@+id/btnBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_left" />

            <!-- Video Name -->
            <TextView
                android:id="@+id/txtVideoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/be_vietnam_pro__regular"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exo_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/colorBackgroundSecondaryLightest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Horizontal layout for subtitle and audio buttons -->
        <LinearLayout
            android:id="@+id/layoutTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/lytTimeBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Subtitle Button -->
            <ImageButton
                android:id="@+id/btnSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/media3_icon_subtitles" />

            <!-- Audio Button -->
            <ImageButton
                android:id="@+id/btnAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/media_session_service_notification_ic_music_note" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/btnOrientation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_screen_rotation" />

            <ImageButton
                android:id="@+id/btnResize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/ic_fit_screen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytTimeBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/lytBtns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTrack">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="00:00" />

            <androidx.media3.ui.DefaultTimeBar
                android:id="@+id/exo_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:buffered_color="@color/colorBackgroundSecondary"
                app:played_color="@color/colorPrimaryText"
                app:unplayed_color="@color/colorBackground" />

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="24:21" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lytTimeBar">

            <ImageButton
                android:id="@+id/exo_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="3dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/previous_btn" />

            <ImageButton
                android:id="@+id/exo_rew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="3dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/previous_btn" />

            <ImageButton
                android:id="@+id/exo_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="3dp"

                android:background="@android:color/transparent"
                android:contentDescription="@string/play_pause_btn" />

            <ImageButton
                android:id="@+id/exo_ffwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginHorizontal="3dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/forward_btn" />

            <ImageButton
                android:id="@+id/exo_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="3dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next_btn" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>